<resources>
    <string name="app_name">qmovie</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="botao_adivinhar">Adivinhar</string>
    <string name="digite_a_resposta">Digite a resposta</string>
    <string name="botao_abrir_dica">Abrir dica: -10s</string>
    <string name="dialog_confirmacao_botao_sim">Sim</string>
    <string name="dialog_confirmacao_dica_extra_titulo">DICA EXTRA!</string>
    <string name="dialog_confirmacao_dica_extra_mensagem">Deseja gastar 10 segundos para abrir 2 letras?</string>
    <string name="dialog_confirmacao_desistir_titulo">Sair</string>
    <string name="dialog_confirmacao_desistir_mensagem">Tem certeza que deseja sair?</string>


    <string name="fim_de_jogo">Fim de Jogo</string>
    <string name="pontuacao_final">Pontuação Final</string>
    <string name="compartilhar">Compartilhar</string>
    <string name="menu_inicial">Menu Inicial</string>

    <string name="pontuação_rodada">Pontuação da rodada</string>
    <string name="dicas_utilizadas">Dicas utilizadas</string>
    <string name="tempo_utilizado">Tempo utilizado</string>
    <string name="proxima_rodada">Proxima rodada</string>
    <string name="tempo_total">Tempo Restante</string>
    <string name="ponto"> pontos</string>
    <string name="pontuação_total">Pontuação Total</string>
    <string name="proxima_pergunta">Próxima pergunta</string>
    <string name="cansei">Cansei</string>


    <string name="play">Vamos jogar !</string>
    <string name="filme">| Filme</string>
    <string name="serie">| Série</string>
    <string name="ator">| Ator</string>
    <string name="diretor">| Diretor</string>

    <string name="configuracoes_1">Confi</string>
    <string name="configuracoes_2">gurações</string>
    <string name="notificacoes">Notificações</string>
    <string name="sons">Sons</string>
    <string name="volume">Volume</string>
    <string name="vibracao">Vibração</string>
    <string name="excluir_conta">Excluir Conta</string>
    <string name="sair">Sair</string>
    <string name="contato">Contato</string>

    <string name="novidades_1">Novi</string>
    <string name="novidades_2">dades</string>
    <string name="favoritar">Favorito</string>
    <string name="cinemas">Cinemas</string>
    <string name="pergunta_filme">Qual é o nome do filme?</string>
    <string name="pergunta_serie">Qual é o nome da série?</string>
    <string name="pergunta_ator">Qual é o nome do(a) ator/atriz?</string>
    <string name="loading">Carregando...</string>

    <string name="facebook_app_id">227022002306224</string>
    <string name="fb_login_protocol_scheme">fb227022002306224</string>
    <string name="connection">Sem Internet</string>
    <string name="alert_connection">Por favor, verifique sua internet e tente novamente.</string>
    <string name="ops">Ooops!</string>
    <string name="contato_text">Aplicativo desenvolvido por Guilherme Nogueira, Luiz Yamaoka e Vitor Gabriel. Para entrar em contato utilze o email contato@qmovie.com.br</string>

</resources>