<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NoConnectionFragment"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@color/preto">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/no_connection"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ops"
        android:textSize="40dp"
        android:textColor="@color/amarelo"/>
    <TextView
        android:textColor="@color/branco"
        android:layout_marginTop="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:text="@string/connection" />
    <TextView
        android:textColor="@color/branco"
        android:layout_marginTop="2dp"
        android:textSize="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/alert_connection" />

</LinearLayout>