<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".GameOverFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
        <TextView
            android:id="@+id/tvFimJogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fim_de_jogo"
            android:textColor="@color/amarelo"
            android:textSize="50dp"
            android:layout_gravity="center"/>

        <ImageView
            android:id="@+id/ivImagemOscar"
            android:layout_width="137dp"
            android:layout_height="167dp"
            android:src="@drawable/oscar"
            android:layout_gravity="center"/>

        <TextView
            android:id="@+id/tvPontuacaoFinal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pontuacao_final"
            android:textColor="@color/preto"
            android:textSize="26dp"
            android:layout_gravity="center"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center">

        <TextView
            android:id="@+id/tvResultadoPontos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="1000 "
            android:textColor="@color/amarelo"
            android:textSize="40dp"
            android:layout_gravity="center"/>

            <TextView
                android:id="@+id/tvPontos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="pontos"
                android:textColor="@color/amarelo"
                android:textSize="40dp"
                android:layout_gravity="center"
                />

        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="290dp"
            android:background="@drawable/round_game_over"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0">


            <Button
                android:id="@+id/btnCompatilhar"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:background="@drawable/background_botao_cinza"
                android:text="@string/compartilhar"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.491"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"

                app:layout_constraintVertical_bias="0.226" />

            <Button
                android:id="@+id/btnRanking"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:background="@drawable/background_botao_cinza"
                android:text="Ranking"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.491"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.464" />

            <Button
                android:id="@+id/btnMenuInicial"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:background="@drawable/background_botao_cinza"
                android:text="@string/menu_inicial"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.491"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.71" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </LinearLayout>


</FrameLayout>