<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/preto"
    tools:context=".NovoJogoFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginHorizontal="15dp"
        android:layout_gravity="">

        <ImageView
            android:id="@+id/imgLogo"
            android:layout_marginTop="35dp"
            android:src="@drawable/logo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <LinearLayout
            android:layout_marginTop="30dp"
            android:background="@drawable/card_filme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:padding="15dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/filme"
                android:adjustViewBounds="true"
                android:maxWidth="110dp"
                android:scaleType="fitCenter"/>

            <LinearLayout
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/branco"
                    android:textSize="35dp"
                    android:text="@string/filme"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/newGameFilme"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/card_filme"
                    android:backgroundTint="@color/preto"
                    android:textColor="@color/branco"
                    android:textSize="12dp"
                    android:layout_width="120dp"
                    android:layout_height="30dp"
                    android:text="@string/play"/>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="25dp"
            android:background="@drawable/card_serie"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:padding="15dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/diretor"
                android:adjustViewBounds="true"
                android:maxWidth="110dp"
                android:scaleType="fitCenter"/>

            <LinearLayout
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/branco"
                    android:textSize="35dp"
                    android:text="@string/serie"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/newGameSerie"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/card_filme"
                    android:backgroundTint="@color/preto"
                    android:textColor="@color/branco"
                    android:textSize="12dp"
                    android:layout_width="120dp"
                    android:layout_height="30dp"
                    android:text="@string/play"/>

            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="25dp"
            android:background="@drawable/card_ator"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:padding="15dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ator"
                android:adjustViewBounds="true"
                android:maxWidth="110dp"
                android:scaleType="fitCenter"/>

            <LinearLayout
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/branco"
                    android:textSize="35dp"
                    android:text="@string/ator"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/newGameAtor"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/card_filme"
                    android:backgroundTint="@color/preto"
                    android:textColor="@color/branco"
                    android:textSize="12dp"
                    android:layout_width="120dp"
                    android:layout_height="30dp"
                    android:text="@string/play"/>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="25dp"
            android:background="@drawable/card_diretor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:padding="15dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/diretor"
                android:adjustViewBounds="true"
                android:maxWidth="110dp"
                android:scaleType="fitCenter"/>

            <LinearLayout
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/branco"
                    android:textSize="35dp"
                    android:text="@string/diretor"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/newGameDiretor"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/card_filme"
                    android:backgroundTint="@color/preto"
                    android:textColor="@color/branco"
                    android:textSize="12dp"
                    android:layout_width="120dp"
                    android:layout_height="30dp"
                    android:text="@string/play"/>

            </LinearLayout>

        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:background="@drawable/bar_round"
        android:layout_gravity="bottom"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_marginRight="50dp"
            android:background="@color/amarelo"
            android:layout_height="30dp"
            android:src="@drawable/conf"
            android:adjustViewBounds="true"
            android:maxWidth="150dp"
            android:scaleType="fitCenter"/>

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_marginRight="50dp"
            android:background="@color/amarelo"
            android:layout_height="30dp"
            android:src="@drawable/jogo"
            android:adjustViewBounds="true"
            android:maxWidth="110dp"
            android:scaleType="fitCenter"/>

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_marginRight="50dp"
            android:background="@color/amarelo"
            android:layout_height="30dp"
            android:src="@drawable/lancamento"
            android:adjustViewBounds="true"
            android:maxWidth="110dp"
            android:scaleType="fitCenter"/>

        <ImageButton
            android:layout_width="wrap_content"
            android:background="@color/amarelo"
            android:layout_height="30dp"
            android:src="@drawable/ranking"
            android:adjustViewBounds="true"
            android:maxWidth="110dp"
            android:scaleType="fitCenter"/>


    </LinearLayout>


</FrameLayout>